Merge branch 'ri/xcode_support' into 'develop'
React Native bridge - iOS Support

See merge request verifai/mobile-sdk/react-native-sdk!2